--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -56,5 +56,6 @@
         "--max-line-length=88"
     ],
     "typescript.preferences.importModuleSpecifier": "relative",
-    "debug.javascript.usePreview": false
+    "debug.javascript.usePreview": false,
+    "python.pythonPath": "C:\\Users\\jimg\\anaconda3\\python.exe"
 }
