--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -74,6 +74,15 @@
             "preLaunchTask": "Compile"
         },
         {
+            "name": "Extension (markdown-cell-highlight)",
+            "type": "extensionHost",
+            "request": "launch",
+            "runtimeExecutable": "${execPath}",
+            "args": [
+                "--extensionDevelopmentPath=${workspaceFolder}"
+            ]
+        },
+        {
             "name": "Python: Current File with iPython",
             "type": "python",
             "request": "launch",
