implement markdown cell highlight

--- a/package.json
+++ b/package.json
@@ -3268,6 +3268,16 @@
                 "language": "pip-requirements",
                 "scopeName": "source.pip-requirements",
                 "path": "./syntaxes/pip-requirements.tmLanguage.json"
+            },
+            {
+                "injectTo": [
+                    "source.python"
+                ],
+                "scopeName": "comment.markdown-cell-inject.python",
+                "path": "./syntaxes/python.markdown.inject.json",
+                "embeddedLanguages": {
+                    "meta.embedded.block.md": "markdown"
+                }
             }
         ],
         "jsonValidation": [
